Fixed the margin spacing on the page titles so that the spacing looked better

--- a/.themes/darkstripes/sass/partials/_blog.scss
+++ b/.themes/darkstripes/sass/partials/_blog.scss
@@ -7,7 +7,7 @@ article {
   }
   header {
     position: relative;
-    padding-top: 2em;
+    padding-top: 0;
     padding-bottom: 1em;
     margin-bottom: 1em;
     background: $img-border bottom left repeat-x;
